Enhances navigation with smooth scrolling and updates section links for improved accessibility

--- a/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
+++ b/html-css-course-master/starter/07-Omnifood-Desktop/content/index.html
@@ -28,11 +28,11 @@
 
         <nav class="main--nav">
             <ul class="nav--list">
-                <li> <a class="navigation--link" href="#"> How it works</a> </li>
-                <li> <a class="navigation--link" href="#"> Meals</a> </li>
-                <li> <a class="navigation--link" href="#"> testimonials</a> </li>
-                <li> <a class="navigation--link" href="#"> Pricing</a> </li>
-                <li> <a class="navigation--link link--cta" href="#">Try for free</a> </li>
+                <li> <a class="navigation--link" href="#how"> How it works</a> </li>
+                <li> <a class="navigation--link" href="#meals"> Meals</a> </li>
+                <li> <a class="navigation--link" href="#testimonials"> testimonials</a> </li>
+                <li> <a class="navigation--link" href="#price"> Pricing</a> </li>
+                <li> <a class="navigation--link link--cta" href="#cta">Try for free</a> </li>
             </ul>
         </nav>
 
@@ -58,8 +58,8 @@
                         personal tastes and
                         nutritional needs.
                     </p>
-                    <a href="#" class="btn btn--filled">Start eating well</a>
-                    <a href="#" class="btn btn--outline">Get more info &rAarr;</a>
+                    <a href="#cta" class="btn btn--filled">Start eating well</a>
+                    <a href="#how" class="btn btn--outline">Get more info &darr;</a>
 
                     <div class="delivered--meals">
                         <div class="delivered--imgs">
@@ -91,7 +91,7 @@
             </div>
         </section>
 
-        <section class="section--how">
+        <section class="section--how" id="how">
             <div class="containor">
                 <span class="subheadingg">How it works</span>
                 <h2 class="heading--secondary"> Your daily dose of health in 3 simple steps</h2>
@@ -147,7 +147,7 @@
             </div>
         </section>
 
-        <section class="section--meals">
+        <section class="section--meals" id="meals">
             <div class="heading--meals">
                 <span class="sub--heading">Meals</span>
                 <p class="meals--tittle">Omnifood AI chooses from 5,000+ recipes</p>
@@ -223,7 +223,7 @@
 
 
         <!-- Testimonial Sdection -->
-        <section class="testimonials gird grid--2-cols">
+        <section class="testimonials gird grid--2-cols" id="testimonials">
             <div>
                 <div class="testimonial">
                     <span class="subheadingg">testimonials</span>
@@ -336,7 +336,7 @@
         </section>
 
         <!-- pricing section -->
-        <section class="section--pricing">
+        <section class="section--pricing" id="price">
             <div>
                 <div class="heading--price">
                     <span class="subheadingg">pricing</span>
@@ -440,7 +440,7 @@
 
         </section>
 
-        <section class="section--cta">
+        <section class="section--cta" id="cta">
 
             <div class="cta--box grid--2-cols">
 
