Updates hero image format from PNG to JPG for improved loading performance nad finally deployed the project at this stage!!!

--- a/Omnifood-project/index.html
+++ b/Omnifood-project/index.html
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="hero-img--box">
-                    <img src="img/hero.png" class="hero--img"
+                    <img src="img/hero.jpg" class="hero--img"
                         alt="Woman enjoy food, meals storage coninor and food bowls in a table">
                 </div>
             </div>
